--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cron": "^1.7.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.2",
     "pg": "^7.12.1",
     "sqlite3": "^4.1.0"
