--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env DB_ENV=testing jest --watchAll"
   },
   "engines": {
     "node": "10.16.1",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Build-Week-HN/BE-Tolu#readme",
   "devDependencies": {
+    "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.16.0",
     "jest": "^24.9.0",
@@ -41,6 +42,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.2",
     "pg": "^7.12.1",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "swagger-jsdoc": "^3.4.0",
+    "swagger-ui-express": "^4.1.2"
   }
 }
